--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "helmet": "^3.15.1",
     "helmet-csp": "^2.7.1",
     "ip": "^1.1.5",
+    "iplocation": "^6.1.0",
+    "js-cookie": "^2.2.0",
     "mongoose": "^5.4.16",
     "morgan": "~1.9.0",
+    "node-geocoder": "^3.22.0",
     "socket.io": "^2.2.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "socket.io-client": "latest"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
