--- a/package.json
+++ b/package.json
@@ -15,34 +15,34 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
+    "debug": "~4.1.1",
     "express": "~4.16.0",
-    "helmet": "^3.15.1",
+    "helmet": "^3.18.0",
     "helmet-csp": "^2.7.1",
     "ip": "^1.1.5",
     "iplocation": "^6.1.0",
     "js-cookie": "^2.2.0",
-    "mongoose": "^5.4.16",
+    "mongoose": "^5.5.8",
     "morgan": "~1.9.0",
     "node-geocoder": "^3.22.0",
     "socket.io": "^2.2.0",
-    "uuid": "^3.3.2",
-    "socket.io-client": "latest"
+    "socket.io-client": "^2.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
     "json-loader": "^0.5.7",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
     "webpack-node-externals": "^1.7.2"
   }
 }
