--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "ip": "^1.1.5",
     "iplocation": "^6.1.0",
     "js-cookie": "^2.2.0",
-    "mongoose": "^5.5.9",
+    "mongoose": "^5.5.10",
     "morgan": "~1.9.0",
     "node-geocoder": "^3.22.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "sweetalert2": "^8.11.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
