--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~4.1.1",
-    "express": "~4.17.0",
+    "express": "^4.17.1",
     "helmet": "^3.18.0",
     "helmet-csp": "^2.7.1",
     "ip": "^1.1.5",
     "iplocation": "^6.1.0",
     "js-cookie": "^2.2.0",
-    "mongoose": "^5.5.10",
+    "mongoose": "^5.5.11",
     "morgan": "~1.9.0",
     "node-geocoder": "^3.22.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "sweetalert2": "^8.11.1",
+    "sweetalert2": "^8.11.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -42,7 +42,7 @@
     "mini-css-extract-plugin": "^0.6.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^1.1.2",
-    "webpack": "^4.32.0",
+    "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-node-externals": "^1.7.2"
   }
